--- a/chrome/browser/resources/settings/people_page/camera.html
+++ b/chrome/browser/resources/settings/people_page/camera.html
@@ -1,6 +1,5 @@
 <link rel="import" href="chrome://resources/html/i18n_behavior.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-icons/image-icons.html">
-<link rel="import" href="chrome://resources/polymer/v1_0/iron-icons/iron-icons.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-spinner/paper-spinner.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
@@ -9,27 +8,23 @@
   <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="camera.css">
   <template>
-    <div id="container" hidden=[[!cameraActive]]
-        class$="[[containerClass_(cameraActive, imageUrl_, cameraOnline_, isFlipped_)]]">
-      <img id="previewImage" class="preview-box"
-          i18n-values="alt:previewAltText" src="[[previewImage]]">
-      <div id="userImageStreamArea">
-        <div id="perspectiveBox" class="preview-box">
-          <div id="userImageStreamCrop">
-            <video id="cameraVideo" autoplay></video>
-          </div>
+    <div hidden="[[!cameraActive]]">
+      <div id="perspectiveBox">
+        <div id="userImageStreamCrop">
+          <video id="cameraVideo" autoplay hidden="[[!cameraOnline_]]"></video>
+          <paper-spinner active="[[!cameraOnline_]]"></paper-spinner>
         </div>
-        <paper-spinner active="[[!cameraOnline_]]"></paper-spinner>
       </div>
-      <paper-icon-button id="flipPhoto" tabindex="1" icon="image:flip"
-          i18n-values="title:flipPhoto" on-tap="onTapFlipPhoto_">
-      </paper-icon-button>
-      <paper-icon-button id="discardPhoto" tabindex="2" icon="delete"
-          i18n-values="title:discardPhoto" on-tap="onTapDiscardPhoto_">
-      </paper-icon-button>
-      <paper-icon-button id="takePhoto" tabindex="2" icon="image:camera-alt"
-          i18n-values="title:takePhoto" on-tap="onTapTakePhoto_">
-      </paper-icon-button>
+      <div id="cameraControls">
+        <paper-icon-button id="flipPhoto" tabindex="1" icon="image:flip"
+            i18n-values="title:flipPhoto" on-tap="onTapFlipPhoto_"
+            disabled="[[!cameraOnline_]]">
+        </paper-icon-button>
+        <paper-icon-button id="takePhoto" tabindex="2" icon="image:camera-alt"
+            i18n-values="title:takePhoto" on-tap="onTapTakePhoto_"
+            disabled="[[!cameraOnline_]]">
+        </paper-icon-button>
+      </div>
     </div>
   </template>
   <script src="camera.js"></script>
