--- a/chrome/browser/resources/settings/people_page/change_picture.html
+++ b/chrome/browser/resources/settings/people_page/change_picture.html
@@ -1,4 +1,5 @@
 <link rel="import" href="chrome://resources/html/i18n_behavior.html">
+<link rel="import" href="chrome://resources/polymer/v1_0/iron-icons/image-icons.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-icons/iron-icons.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-selector/iron-selector.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
@@ -15,9 +16,12 @@
       <div id="availableIcons" class="start">
         <iron-selector id="selector" on-iron-activate="onImageActivate_"
             selected-item="{{selectedItem_}}">
-          <img id="cameraImage" class="bordered-image" data-type="camera"
-              src="chrome://theme/IDR_BUTTON_USER_IMAGE_TAKE_PHOTO"
+          <iron-icon id="cameraImage" data-type="camera" icon="image:camera-alt"
               alt="[[i18n('takePhoto')]]" hidden="[[!cameraPresent_]]">
+          </iron-icon>
+          <iron-icon data-type="file" icon="folder"
+              alt="[[i18n('chooseFile')]]">
+          </iron-icon>
           <img id="profileImage" data-type="profile"
               src="[[profileImageUrl_]]"
               alt="[[i18n('profilePhotoLoading')]]">
