Settings People Revamp: Add Author credits to ChromeOS Change Picture.
Adds the missing author credit text as shown in the mocks here for the
ChromeOS Change Picture.

BUG=563721

Review URL: https://codereview.chromium.org/1699343002

Cr-Commit-Position: refs/heads/master@{#375986}

--- a/chrome/browser/resources/settings/people_page/change_picture.html
+++ b/chrome/browser/resources/settings/people_page/change_picture.html
@@ -28,9 +28,20 @@
           <img id="oldImage" data-type="old"
               src="[[oldImageUrl_]]" hidden="[[!oldImageUrl_]]">
           <template is="dom-repeat" items="[[defaultImages_]]">
-            <img data-type="default" src="[[item.url]]" alt="[[item.title]]">
+            <img data-type="default" data-default-image-index$="[[index]]"
+                src="[[item.url]]" alt="[[item.title]]">
           </template>
         </iron-selector>
+        <template is="dom-if" if="[[isAuthorCreditShown_(selectedItem_)]]">
+          <div id="authorCredit">
+            [[i18n('authorCredit')]]
+            [[getAuthorName_(selectedItem_, defaultImages_)]]
+            <a href="[[getAuthorWebsite_(selectedItem_, defaultImages_)]]"
+                target="_blank">
+              [[getAuthorWebsite_(selectedItem_, defaultImages_)]]
+            </a>
+          </div>
+        </template>
       </div>
       <div id="previewPane">
         <img i18n-values="alt:previewAltText" src="[[selectedItem_.src]]"
