--- a/content/test/data/media/peerconnection-call.html
+++ b/content/test/data/media/peerconnection-call.html
@@ -812,9 +812,11 @@
     connectOnIceCandidate(caller, callee);
 
     caller.createOffer(
-        function (offer) {
-          onOfferCreated(offer, caller, callee);
-        });
+      function (offer) {
+        onOfferCreated(offer, caller, callee);
+      },
+      function(error) {}
+    );
   }
 
   function iceCandidateIsLoopback(candidate) {
@@ -902,7 +904,10 @@
                                   callee.createAnswer(
                                     function (answer) {
                                       onAnswerCreated(answer, caller, callee);
-                                    });
+                                    },
+                                    function(error) {
+                                    }
+                                  );
                                 },
                                 onRemoteDescriptionError);
   }
