Add the "Never Saved" section to passwords.
BUG=546836

Review URL: https://codereview.chromium.org/1689333002

Cr-Commit-Position: refs/heads/master@{#376252}

--- a/chrome/browser/resources/settings/passwords_and_forms_page/passwords_and_forms_page.html
+++ b/chrome/browser/resources/settings/passwords_and_forms_page/passwords_and_forms_page.html
@@ -1,5 +1,7 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 <link rel="import" href="chrome://resources/cr_elements/cr_expand_button/cr_expand_button.html">
+<link rel="import" href="chrome://resources/html/assert.html">
+<link rel="import" href="chrome://resources/html/cr.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-collapse/iron-collapse.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-item/paper-item-body.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-item/paper-item.html">
@@ -34,8 +36,9 @@
         </cr-expand-button>
       </div>
       <iron-collapse id="collapse" opened="{{passwordsOpened}}">
-        <passwords-section saved-passwords="{{savedPasswords}}">
-        </passwords-section>
+      <passwords-section saved-passwords="{{savedPasswords}}"
+          password-exceptions="{{passwordExceptions}}">
+      </passwords-section>
       </iron-collapse>
     </div>
   </template>
