--- a/chrome/browser/resources/settings/passwords_and_forms_page/passwords_section.html
+++ b/chrome/browser/resources/settings/passwords_and_forms_page/passwords_section.html
@@ -1,8 +1,7 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-list/iron-list.html">
+<link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-input/paper-input.html">
-<link rel="import" href="chrome://resources/polymer/v1_0/paper-item/paper-item-body.html">
-<link rel="import" href="chrome://resources/polymer/v1_0/paper-item/paper-item.html">
 
 <dom-module id="passwords-section">
   <link rel="import" type="css" href="chrome://md-settings/site_settings_page/site_settings_page.css">
@@ -24,6 +23,20 @@
             <paper-input id="password" type="password" disabled
                 value="[[getEmptyPassword_(item.numCharactersInPassword)]]">
             </paper-input>
+          </div>
+        </template>
+      </iron-list>
+    </div>
+    <div class="list-frame">
+      <div class="secondary" i18n-content="passwordExceptionsHeading"></div>
+      <iron-list id="passwordExceptionsList" class="vertical-list list-section"
+          items="{{passwordExceptions}}">
+        <template>
+          <div class="list-item two-line">
+            <div id="exception" class="start">[[item]]</div>
+            <paper-icon-button id="removeButton" icon="close"
+                on-tap="onRemovePasswordException_" tabindex$="[[tabIndex]]"
+                i18n-values="alt:deletePasswordException"></paper-icon-button>
           </div>
         </template>
       </iron-list>
