--- a/chrome/browser/resources/settings/search_engines_page/search_engine_dialog.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engine_dialog.html
@@ -1,44 +1,49 @@
-<link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
-<link rel="import" href="chrome://resources/polymer/v1_0/paper-dialog/paper-dialog.html">
+<link rel="import" href="chrome://resources/html/polymer_config.html">
+<link rel="import" href="chrome://md-settings/i18n_setup.html">
+<link rel="import" href="chrome://md-settings/search_engines_page/search_engines_browser_proxy.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-button/paper-button.html">
+<link rel="import" href="chrome://resources/polymer/v1_0/paper-dialog/paper-dialog.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-input/paper-input.html">
+<link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 
-<dom-module id="settings-add-search-engine-dialog">
+<dom-module id="settings-search-engine-dialog">
   <link rel="import" type="css" href="chrome://md-settings/settings_dialog.css">
   <template>
     <paper-dialog modal id="dialog">
       <div id="dialog-content">
         <div class="top-row">
-          <span class="title">Add search engine</span>
-          <paper-icon-button icon="clear" on-tap="onCancelTap_">
+          <span class="title">[[dialogTitle_]]</span>
+          <paper-icon-button icon="clear" on-tap="cancel_" id="close">
           </paper-icon-button>
         </div>
         <div class="body">
           <div class="explanation">
             <paper-input always-float-label id="searchEngine"
                 i18n-values="label:searchEnginesSearchEngineLabel"
-                value="{{searchEngine}}">
+                value="{{searchEngine_}}" on-focus="validate_"
+                on-input="validate_">
             </paper-input>
             <paper-input always-float-label id="keyword"
                 i18n-values="label:searchEnginesKeywordLabel"
-                value="{{keyword}}">
+                value="{{keyword_}}" on-focus="validate_" on-input="validate_">
             </paper-input>
             <paper-input always-float-label id="queryUrl"
                 i18n-values="label:searchEnginesQueryURLLabel"
-                value="{{queryUrl}}">
+                value="{{queryUrl_}}" on-focus="validate_" on-input="validate_">
             </paper-input>
           </div>
           <div class="button-container">
-            <paper-button class="cancel-button" id="cancel"
-                on-tap="onCancelTap_" i18n-content="cancel"></paper-button>
-            <paper-button class="action-button" id="add"
-                on-tap="onAddTap_" i18n-content="searchEnginesAdd">
+            <paper-button class="cancel-button" on-tap="cancel_"
+                i18n-content="cancel" id="cancel"></paper-button>
+            <paper-button id="actionButton" class="action-button"
+                on-tap="onActionButtonTap_">
+              [[actionButtonText_]]
             </paper-button>
           </div>
         </div>
       </div>
     </paper-dialog>
   </template>
-  <script src="add_search_engine_dialog.js"></script>
+  <script src="search_engine_dialog.js"></script>
 </dom-module>
