--- a/chrome/browser/resources/settings/search_engines_page/search_engine_entry.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engine_entry.html
@@ -1,21 +1,27 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-dropdown/iron-dropdown.html">
+<link rel="import" href="chrome://md-settings/search_engines_page/search_engines_browser_proxy.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-item/paper-item.html">
+<link rel="import" href="chrome://md-settings/search_engines_page/search_engine_dialog.html">
 
 <dom-module id="settings-search-engine-entry">
   <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="chrome://md-settings/search_engines_page/search_engine_entry.css">
   <template>
+    <template is="dom-if" if="[[showEditSearchEngineDialog_]]" restamp>
+      <settings-search-engine-dialog model="[[engine]]">
+      </settings-search-engine-dialog>
+    </template>
     <div id="container" class="list-item">
       <div class="name-column">
         <span class="icon-container">
-          <iron-icon icon="image:brightness-1" item-icon></iron-icon>
+          <iron-icon src="[[engine.iconURL]]"></iron-icon>
         </span>
-        <div class="name">{{engine.name}}</div>
+        <div class="name">[[engine.displayName]]</div>
       </div>
-      <div class="keyword-column">{{engine.keyword}}</div>
-      <div class="url-column">{{engine.url}}</div>
+      <div class="keyword-column">[[engine.keyword]]</div>
+      <div class="url-column">[[engine.url]]</div>
       <div class="icon-container">
         <paper-icon-button icon="more-vert" toggles active="{{editMenuOpened}}">
         </paper-icon-button>
@@ -23,11 +29,13 @@
             vertical-align="top">
           <div class="dropdown-content">
             <paper-item on-tap="onMakeDefaultTap_"
-                i18n-content="searchEnginesMakeDefault"></paper-item>
+                i18n-content="searchEnginesMakeDefault"
+                hidden="[[engine.default]]" id="makeDefault"></paper-item>
             <paper-item on-tap="onEditTap_"
-                i18n-content="searchEnginesEdit"></paper-item>
+                i18n-content="searchEnginesEdit" id="edit"></paper-item>
             <paper-item on-tap="onDeleteTap_"
-                i18n-content="searchEnginesRemoveFromList"></paper-item>
+                i18n-content="searchEnginesRemoveFromList"
+                hidden="[[engine.default]]" id="delete"></paper-item>
           <div>
         </iron-dropdown>
       </div>
