MD Settings: Manage search engines, localizing/adding strings.
BUG=479359

Review URL: https://codereview.chromium.org/1703703002

Cr-Commit-Position: refs/heads/master@{#376518}

--- a/chrome/browser/resources/settings/on_startup_page/startup_urls_page.html
+++ b/chrome/browser/resources/settings/on_startup_page/startup_urls_page.html
@@ -46,7 +46,7 @@
               <paper-button class="cancel-button" on-tap="onCancelTap_"
                   id="cancel" i18n-content="cancel"></paper-button>
               <paper-button class="action-button" id="addUrlButton"
-                  on-tap="onOkTap_" i18n-content="addLabel">
+                  on-tap="onOkTap_" i18n-content="add">
               </paper-button>
             </div>
           </div>
