--- a/chrome/browser/resources/settings/people_page/users_page.html
+++ b/chrome/browser/resources/settings/people_page/users_page.html
@@ -52,7 +52,7 @@
               disabled="[[editingUsersDisabled]]">
           </paper-input>
           <div class="add-user-button layout horizontal end-justified">
-            <paper-button i18n-content="addLabel" on-tap="addUser_"
+            <paper-button i18n-content="add" on-tap="addUser_"
                 disabled="[[editingUsersDisabled]]" raised>
             </paper-button>
           </div>
