--- a/chrome/browser/resources/settings/search_engines_page/search_engines_list.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engines_list.html
@@ -6,9 +6,9 @@
   <link rel="import" type="css" href="search_engines_list.css">
   <template>
       <div class="headers">
-        <div class="name" i18n-content="searchEnginesSearchEngineLabel"></div>
-        <div class="keyword" i18n-content="searchEnginesKeywordLabel"></div>
-        <div class="url" i18n-content="searchEnginesQueryURLLabel"></div>
+        <div class="name" i18n-content="searchEnginesSearchEngine"></div>
+        <div class="keyword" i18n-content="searchEnginesKeyword"></div>
+        <div class="url" i18n-content="searchEnginesQueryURL"></div>
       </div>
       <div>
         <template is="dom-repeat" items="[[engines]]">
