--- a/chrome/browser/resources/settings/search_engines_page/search_engines_page.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engines_page.html
@@ -26,7 +26,7 @@
     </div>
     <div class="settings-box">
       <paper-button class="link-button"
-          i18n-content="searchEnginesAddSearchEngineLabel"
+          i18n-content="searchEnginesAddSearchEngine"
           on-tap="onAddSearchEngineTap_" id="addSearchEngine"></paper-button>
     </div>
     <template is="dom-if" if="[[showAddSearchEngineDialog_]]" restamp>
@@ -34,7 +34,7 @@
     </template>
     <div class="settings-box block">
       <div class="other-label-container">
-        <span i18n-content="searchEnginesOtherLabel"></span>
+        <span i18n-content="searchEnginesOther"></span>
         <cr-expand-button expanded="{{otherSearchEnginesExpanded_}}">
         </cr-expand-button>
       </div>
