--- a/chrome/browser/resources/settings/search_page/search_page.html
+++ b/chrome/browser/resources/settings/search_page/search_page.html
@@ -25,13 +25,12 @@
         </div>
         <div class="settings-box">
           <paper-button class="link-button"
-              i18n-content="searchManageButtonLabel"
-              on-tap="onSearchEnginesTap_">
+              i18n-content="searchEnginesManage" on-tap="onSearchEnginesTap_">
           </paper-button>
         </div>
       </neon-animatable>
       <neon-animatable id="search-engines">
-        <settings-subheader i18n-values="page-title:searchEnginesLabel">
+        <settings-subheader i18n-values="page-title:searchEnginesManage">
         </settings-subheader>
         <settings-search-engines-page></settings-search-engines-page>
       </neon-animatable>
