MD Settings: Start device page
Add the Device section, with a partially implemented
Touchpad page.

Device section: http://i.imgur.com/AYLFAQa.png
Touchpad settings: http://i.imgur.com/Lu3lxnO.png

BUG=546834

Review URL: https://codereview.chromium.org/1707613002

Cr-Commit-Position: refs/heads/master@{#376532}

--- a/chrome/browser/resources/settings/basic_page/basic_page.html
+++ b/chrome/browser/resources/settings/basic_page/basic_page.html
@@ -9,6 +9,7 @@
 <link rel="import" href="chrome://md-settings/reset_page/reset_profile_banner.html">
 
 <if expr="chromeos">
+<link rel="import" href="chrome://md-settings/device_page/device_page.html">
 <link rel="import" href="chrome://md-settings/internet_page/internet_page.html">
 </if>
 
@@ -47,6 +48,16 @@
         </settings-appearance-page>
       </settings-section>
     </template>
+<if expr="chromeos">
+    <template is="dom-if" if="[[showPage(pageVisibility.device)]]" restamp>
+      <settings-section page-title="[[i18n('devicePageTitle')]]"
+          current-route="[[currentRoute]]" section="device">
+        <settings-device-page  prefs="{{prefs}}"
+            current-route="{{currentRoute}}">
+        </settings-device-page>
+      </settings-section>
+    </template>
+</if>
     <template is="dom-if" if="[[showPage(pageVisibility.onStartup)]]" restamp>
       <settings-section page-title="[[i18n('onStartup')]]"
           current-route="[[currentRoute]]" section="onStartup">
