[MD settings] moving settings shared css to polymer style module
This CL converts the settings_shared.css
into a polymer style-module at
chrome/browser/resources/settings/settings_shared_css.html

BUG=425627

Review URL: https://codereview.chromium.org/1656153002

Cr-Commit-Position: refs/heads/master@{#376559}

--- a/chrome/browser/resources/settings/clear_browsing_data_page/clear_browsing_data_page.html
+++ b/chrome/browser/resources/settings/clear_browsing_data_page/clear_browsing_data_page.html
@@ -5,12 +5,12 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="chrome://md-settings/controls/settings_checkbox.html">
 <link rel="import" href="chrome://md-settings/controls/settings_dropdown_menu.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <dom-module id="settings-clear-browsing-data-page">
-  <link rel="import" type="css"
-      href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="clear_browsing_data_page.css">
   <template>
+    <style include="settings-shared"></style>
     <div class="settings-box block">
       <span i18n-content="clearFollowingItemsFrom"></span>
       <settings-dropdown-menu id="clearFrom"
