--- a/chrome/browser/resources/settings/passwords_and_forms_page/passwords_section.html
+++ b/chrome/browser/resources/settings/passwords_and_forms_page/passwords_section.html
@@ -2,12 +2,13 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-list/iron-list.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-input/paper-input.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <dom-module id="passwords-section">
   <link rel="import" type="css" href="chrome://md-settings/site_settings_page/site_settings_page.css">
   <link rel="import" type="css" href="chrome://md-settings/passwords_and_forms_page/passwords_section.css">
-  <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <template>
+    <style include="settings-shared"></style>
     <div class="list-frame">
       <div class="secondary" i18n-content="savedPasswordsHeading"></div>
       <iron-list id="passwordList" class="vertical-list list-section"
