--- a/chrome/browser/resources/settings/a11y_page/a11y_page.html
+++ b/chrome/browser/resources/settings/a11y_page/a11y_page.html
@@ -1,10 +1,11 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-button/paper-button.html">
 <link rel="import" href="chrome://md-settings/controls/settings_checkbox.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <dom-module id="settings-a11y-page">
-  <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <template>
+    <style include="settings-shared"></style>
     <div class="settings-card">
       <div class="settings-box row first">
         <span i18n-content="a11yExplanation"></span>
