--- a/chrome/browser/resources/settings/bluetooth_page/bluetooth_add_device_dialog.html
+++ b/chrome/browser/resources/settings/bluetooth_page/bluetooth_add_device_dialog.html
@@ -3,12 +3,13 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-selector/iron-selector.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-button/paper-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-spinner/paper-spinner.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <dom-module id="settings-bluetooth-add-device-dialog">
-  <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="bluetooth_page.css">
   <link rel="import" type="css" href="bluetooth_dialog.css">
   <template>
+    <style include="settings-shared"></style>
     <div id="dialogOuterDiv" class="layout vertical flex">
       <div id="dialogHeaderDiv" class="settings-box layout horizontal">
         <span id="dialogTitle" class="flex"
