--- a/chrome/browser/resources/settings/date_time_page/date_time_page.html
+++ b/chrome/browser/resources/settings/date_time_page/date_time_page.html
@@ -1,10 +1,11 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="chrome://md-settings/controls/settings_checkbox.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <dom-module id="settings-date-time-page">
-  <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <template>
+    <style include="settings-shared"></style>
     <div class="settings-card">
       <div class="settings-box first block">
         <div i18n-content="timeZone"></div>
