--- a/chrome/browser/resources/settings/languages_page/manage_languages_page.html
+++ b/chrome/browser/resources/settings/languages_page/manage_languages_page.html
@@ -6,13 +6,13 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="chrome://resources/html/assert.html">
 <link rel="import" href="chrome://resources/html/cr.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 <link rel="import" href="languages.html">
 
 <dom-module id="settings-manage-languages-page">
-  <link rel="import" type="css"
-      href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="manage_languages_page.css">
   <template>
+    <style include="settings-shared"></style>
     <settings-languages languages="{{languages}}"></settings-languages>
     <div class="settings-box block content">
       <h2 i18n-content="enabledLanguages"></h2>
