--- a/chrome/browser/resources/settings/on_startup_page/on_startup_page.html
+++ b/chrome/browser/resources/settings/on_startup_page/on_startup_page.html
@@ -6,12 +6,12 @@
 <link rel="import" href="chrome://md-settings/on_startup_page/startup_urls_page.html">
 <link rel="import" href="chrome://md-settings/settings_page/settings_animated_pages.html">
 <link rel="import" href="chrome://md-settings/settings_page/settings_subheader.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <dom-module id="settings-on-startup-page">
-  <link rel="import" type="css"
-      href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="on_startup_shared.css">
   <template>
+    <style include="settings-shared"></style>
     <div class="settings-card">
       <div class="settings-box block first">
         <settings-radio-group id="onStartupRadioGroup"
