--- a/chrome/browser/resources/settings/people_page/camera.html
+++ b/chrome/browser/resources/settings/people_page/camera.html
@@ -3,11 +3,12 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-spinner/paper-spinner.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <dom-module id="settings-camera">
-  <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="camera.css">
   <template>
+    <style include="settings-shared"></style>
     <div hidden="[[!cameraActive]]">
       <div id="perspectiveBox">
         <div id="userImageStreamCrop">
