--- a/chrome/browser/resources/settings/people_page/users_page.html
+++ b/chrome/browser/resources/settings/people_page/users_page.html
@@ -5,12 +5,13 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-input/paper-input.html">
 <link rel="import" href="chrome://md-settings/controls/settings_checkbox.html">
 <link rel="import" href="chrome://md-settings/settings_page/settings_section.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 <link rel="import" href="user_list.html">
 
 <dom-module id="settings-users-page">
-  <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="users_page.css">
   <template>
+    <style include="settings-shared"></style>
     <div class="settings-box" i18n-content="usersModifiedByOwnerLabel"
         hidden$="{{computeHideOwnerLabel_(isOwner, isWhitelistManaged)}}">
     </div>
