--- a/chrome/browser/resources/settings/reset_page/reset_page.html
+++ b/chrome/browser/resources/settings/reset_page/reset_page.html
@@ -1,13 +1,14 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 <link rel="import" href="chrome://md-settings/reset_page/reset_profile_dialog.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <if expr="chromeos">
 <link rel="import" href="chrome://md-settings/reset_page/powerwash_dialog.html">
 </if>
 
 <dom-module id="settings-reset-page">
-  <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <template>
+    <style include="settings-shared"></style>
     <div class="settings-card">
       <div class="settings-box first two-line" id="resetProfile"
           on-tap="onShowResetProfileDialog_">
