--- a/chrome/browser/resources/settings/site_settings/all_sites.html
+++ b/chrome/browser/resources/settings/site_settings/all_sites.html
@@ -1,13 +1,13 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 <link rel="import" href="chrome://md-settings/site_settings/constants.html">
 <link rel="import" href="chrome://md-settings/site_settings/site_list.html">
 <link rel="import" href="chrome://md-settings/site_settings/site_settings_behavior.html">
 
 <dom-module id="all-sites">
-  <link rel="import" type="css"
-      href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="all_sites.css">
   <template>
+    <style include="settings-shared"></style>
     <settings-site-list id="siteList" all-sites
         category="-1" prefs="{{prefs}}" current-route="{{currentRoute}}"
         selected-origin="{{selectedOrigin}}"></settings-site-list>
