--- a/chrome/browser/resources/settings/site_settings/site_list.html
+++ b/chrome/browser/resources/settings/site_settings/site_list.html
@@ -9,13 +9,14 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-menu-button/paper-menu-button.html">
 <link rel="import" href="chrome://md-settings/prefs/prefs_behavior.html">
 <link rel="import" href="chrome://md-settings/prefs/prefs_types.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 <link rel="import" href="chrome://md-settings/site_settings/constants.html">
 <link rel="import" href="chrome://md-settings/site_settings/site_settings_behavior.html">
 
 <dom-module id="settings-site-list">
-  <link rel="import" type="css" href="../settings_shared.css">
   <link rel="import" type="css" href="site_list.css">
   <template>
+    <style include="settings-shared"></style>
     <paper-submenu id="category" hidden on-paper-submenu-open="onToggle_"
         on-paper-submenu-close="onToggle_">
       <paper-item class="menu-trigger" hidden$="[[allSites]]">
