--- a/chrome/browser/resources/settings/site_settings/site_settings_category.html
+++ b/chrome/browser/resources/settings/site_settings/site_settings_category.html
@@ -9,6 +9,7 @@
 <link rel="import" href="chrome://md-settings/prefs/prefs_types.html">
 <link rel="import" href="chrome://md-settings/settings_page/settings_animated_pages.html">
 <link rel="import" href="chrome://md-settings/settings_page/settings_subheader.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 <link rel="import" href="chrome://md-settings/site_settings/constants.html">
 <link rel="import" href="chrome://md-settings/site_settings/site_details.html">
 <link rel="import" href="chrome://md-settings/site_settings/site_list.html">
@@ -16,10 +17,9 @@
 <link rel="import" href="chrome://md-settings/site_settings/site_settings_prefs_browser_proxy.html">
 
 <dom-module id="site-settings-category">
-  <link rel="import" type="css"
-      href="chrome://md-settings/settings_shared.css">
   <link rel="import" type="css" href="site_settings_category.css">
   <template>
+    <style include="settings-shared"></style>
     <paper-icon-item>
       <iron-icon icon="[[computeIconForContentCategory(category)]]"
           item-icon></iron-icon>
