--- a/chrome/browser/resources/settings/people_page/camera.html
+++ b/chrome/browser/resources/settings/people_page/camera.html
@@ -1,4 +1,5 @@
 <link rel="import" href="chrome://resources/html/i18n_behavior.html">
+<link rel="import" href="chrome://resources/html/util.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-icons/image-icons.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-spinner/paper-spinner.html">
@@ -17,11 +18,11 @@
         </div>
       </div>
       <div id="cameraControls">
-        <paper-icon-button id="flipPhoto" tabindex="1" icon="image:flip"
+        <paper-icon-button id="flipPhoto" tabindex="2" icon="image:flip"
             i18n-values="title:flipPhoto" on-tap="onTapFlipPhoto_"
             disabled="[[!cameraOnline_]]">
         </paper-icon-button>
-        <paper-icon-button id="takePhoto" tabindex="2" icon="image:camera-alt"
+        <paper-icon-button id="takePhoto" tabindex="1" icon="image:camera-alt"
             i18n-values="title:takePhoto" on-tap="onTapTakePhoto_"
             disabled="[[!cameraOnline_]]">
         </paper-icon-button>
