--- a/chrome/browser/resources/settings/device_page/touchpad.html
+++ b/chrome/browser/resources/settings/device_page/touchpad.html
@@ -2,10 +2,11 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 <link rel="import" href="chrome://md-settings/controls/settings_checkbox.html">
 <link rel="import" href="chrome://md-settings/controls/settings_radio_group.html">
+<link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <dom-module id="settings-touchpad">
-  <link rel="import" type="css" href="chrome://md-settings/settings_shared.css">
   <template>
+    <style include="settings-shared"></style>
     <!-- TODO(michaelpg): Add touchpad speed slider. -->
     <div class="settings-box block first">
       <settings-checkbox pref="{{prefs.settings.touchpad.enable_tap_to_click}}"
