Files: Add a shortcut Alt-E to open gear menu.
BUG=308825
TEST=run browser_tests --gtest_filter=*GearMenu*

Review URL: https://codereview.chromium.org/1725563004

Cr-Commit-Position: refs/heads/master@{#376955}

--- a/ui/file_manager/file_manager/main.html
+++ b/ui/file_manager/file_manager/main.html
@@ -115,6 +115,7 @@
 
       <command id="install-new-extension"
                i18n-values="label:INSTALL_NEW_EXTENSION_LABEL">
+      <command id="open-gear-menu" shortcut="U+0045-Alt">
     </commands>
 
     <cr-menu id="file-context-menu" class="chrome-menu files-menu"
