MD Settings: polish up some top-level buttons
This removes text-transform none that undoes capitalization.
Yes, this does expose some oddities for rows that are implemented as

<paper-button>
  <div>
  <div class="secondary>

I think we should implement those instead with:

<paper-ripple>
  <div>
  <div class="secondary">

But it depends on the desired focus behavior.

In general, we should be using <paper-button> when the mocks are
ALL UPPER, and <a href> for lowercase links and <a is="action-link">
for lowercased links that dont actually go anywhere
(i.e. "Add a search engine")

R=dschuyler@chromium.org
BUG=425627

Review URL: https://codereview.chromium.org/1709413003

Cr-Commit-Position: refs/heads/master@{#377153}

--- a/chrome/browser/resources/settings/people_page/people_page.html
+++ b/chrome/browser/resources/settings/people_page/people_page.html
@@ -43,7 +43,7 @@
           </div>
 <if expr="not chromeos">
           <template is="dom-if" if="[[!syncStatus.signedIn]]">
-            <paper-button class="primary-button" on-tap="onSigninTap_" raised
+            <paper-button class="secondary-button" on-tap="onSigninTap_"
                 disabled="[[syncStatus.setupInProgress]]">
                 [[i18n('syncSignin')]]
             </paper-button>
@@ -74,7 +74,7 @@
         <template is="dom-if"
             if="[[isAdvancedSyncSettingsVisible_(syncStatus)]]">
           <div class="settings-box">
-            <paper-button on-tap="onSyncTap_" raised>
+            <paper-button on-tap="onSyncTap_" class="primary-button">
               [[i18n('syncPageTitle')]]
             </paper-button>
           </div>
@@ -89,7 +89,7 @@
 </if>
 
         <div class="settings-box">
-          <paper-button class="link-button" i18n-content="manageOtherPeople"
+          <paper-button class="primary-button" i18n-content="manageOtherPeople"
               on-tap="onManageOtherPeople_">
           </paper-button>
         </div>
