--- a/chrome/browser/resources/settings/privacy_page/privacy_page.html
+++ b/chrome/browser/resources/settings/privacy_page/privacy_page.html
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="settings-box">
-          <paper-button on-tap="onClearBrowsingDataTap_"
+          <paper-button on-tap="onClearBrowsingDataTap_" class="primary-button"
               i18n-content="clearBrowsingData">
           </paper-button>
         </div>
