--- a/chrome/browser/resources/settings/search_page/search_page.html
+++ b/chrome/browser/resources/settings/search_page/search_page.html
@@ -25,8 +25,8 @@
           </select>
         </div>
         <div class="settings-box">
-          <paper-button class="link-button" i18n-content="searchEnginesManage"
-              on-tap="onManageSearchEnginesTap_">
+          <paper-button i18n-content="searchEnginesManage"
+              on-tap="onManageSearchEnginesTap_" class="primary-button">
           </paper-button>
         </div>
       </neon-animatable>
