--- a/chrome/browser/resources/settings/search_engines_page/search_engines_page.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engines_page.html
@@ -9,6 +9,7 @@
 <link rel="import" href="chrome://md-settings/search_engines_page/search_engines_list.html">
 <link rel="import" href="chrome://md-settings/settings_shared_css.html">
 <link rel="import" href="chrome://md-settings/web_ui_listener_behavior.html">
+<link rel="import" href="chrome://resources/html/action_link.html">
 
 <dom-module id="settings-search-engines-page">
   <template>
@@ -26,9 +27,8 @@
       </settings-search-engines-list>
     </div>
     <div class="settings-box">
-      <paper-button class="link-button"
-          i18n-content="searchEnginesAddSearchEngine"
-          on-tap="onAddSearchEngineTap_" id="addSearchEngine"></paper-button>
+      <a is="action-link" i18n-content="searchEnginesAddSearchEngine"
+          on-tap="onAddSearchEngineTap_" id="addSearchEngine"></a>
     </div>
     <template is="dom-if" if="[[showAddSearchEngineDialog_]]" restamp>
       <settings-search-engine-dialog></settings-search-engine-dialog>
