--- a/chrome/browser/resources/settings/settings_shared_css.html
+++ b/chrome/browser/resources/settings/settings_shared_css.html
@@ -29,7 +29,6 @@
       paper-button {
         margin: 0;
         min-width: auto;
-        padding: 0;
       }
 
       paper-button[toggles][active] {
@@ -43,10 +42,10 @@
       paper-button.primary-button {
         --paper-button: {
           color: rgb(66, 133, 244);
-          text-align: start;
-          text-transform: none;
           font-weight: 500;
+          text-align: start;
         };
+        margin: 0 -0.57em;  /* Offsets default paper-button padding. */
       }
 
       paper-button.secondary-button {
@@ -60,8 +59,8 @@
       paper-button.tertiary-button {
         --paper-button: {
           color: rgb(51, 103, 214);
-          text-decoration: none;
           font-weight: 400;
+          text-decoration: none;
         };
       }
 
@@ -89,9 +88,9 @@
 
       .list-frame {
         @apply(--layout-center);
-        display: block;
         -webkit-padding-end: 20px;
         -webkit-padding-start: 48px;
+        display: block;
         padding-bottom: 0;
         padding-top: 0;
       }
@@ -147,15 +146,6 @@
         @apply(--layout-center);
         color: rgb(66, 133, 244);
         font-weight: 500;
-        padding: 0;
-        text-decoration: none;
-        text-transform: none;
-      }
-
-      .link-button {
-        color: rgb(61, 130, 243);
-        padding: 6px 0;
-        text-transform: none;
       }
 
       .settings-card {
